# panda_grasp

./: CMakeLists.txt  README.md  package.xml
config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  panda.srdf  ros_controllers.yaml
controllers/kdl_controller/: Makefile  kdl_controller.cpp
controllers/kdl_controller2/: Makefile  kdl_controller2.cpp
controllers/panda_control/: panda_control  panda_control.cpp
controllers/panda_controller/: panda_controller.py
launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  grasp_demo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  panda_controller.launch  panda_moveit_controller_manager.launch.xml  panda_world.launch  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
misc/: dual_panda.urdf
protos/: panda.proto
robots/: dual_panda.urdf  dual_panda_angled.urdf  dual_panda_angled.urdf.xacro  dual_panda_example.urdf.xacro  hand.xacro  panda_arm.xacro
scripts/: double_panda_ros.py  gripper_command.py  joint_state_publisher.py  robot_control.py  trajectory_follower.py
worlds/: double_panda.wbt  double_panda_angled.wbt  panda_world.wbt  panda_world_double.wbt  panda_world_empty.wbt
