<?xml version="1.0"?>
<package format="2">
  <name>double_panda</name>
  <version>0.0.0</version>
  <description>The double_panda package</description>

  <author email="ddelehel@gmail.com">Donatien Delehelle</author>
  <maintainer email="ddelehel@gmail.com">Donatien Delehelle</maintainer>

  <url type="website">http://moveit.ros.org/</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>xacro</depend>
  <depend>moveit_simple_controller_manager</depend>

  <!-- CUSTOM -->
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_perception</depend>
  <depend>moveit_visual_tools</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>

  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_setup_assistant</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
</package>
